<resources>
    <string name="app_name">recipe app project</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="search_for_recipes">Search for Recipes....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_app_helps">Our app helps you discover and organize recipes effortlessly. Enjoy personalized recommendations and save your favorites!</string>
    <string name="our_team">Our Team</string>
    <string name="contact_us">Contact Us:</string>
    <string name="inked_in">click to open our linked in page</string>
    <string name="GirlsRecipe">Girls Recipes</string>
    <string name="todo">TODO</string>
    <string name="tasty_trail">Tasty Trail</string>
    <string name="email">email</string>
    <string name="username">UserName</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="Login">Log In</string>
    <string name="facebook">open facebook page</string>
    <string name="instagram">open instagram page</string>
    <string name="basmala_Salama">Basmala Salama</string>
    <string name="all_recipes">All Recipes</string>
    <string name="all_categories">All Categories</string>
    <string name="category_name">Category Name</string>
    <string name="no_favorites">No Favorites...</string>
    <string name="aya_abdelmoniem">Aya AbdElmoniem</string>
    <string name="sama_ahmed">Sama Ahmed</string>
    <string name="menna_samy">Menna Samy</string>
    <string name="_2024_akla_saree3a">© 2024 AKla Saree3a</string>
    <string name="video_player_button">video player button</string>
    <string name="scroll_to_see_more">scroll to see more</string>
    <string name="click_to_show_video">click to show video</string>
    <string name="favorite">add to favourites</string>
    <string name="play_video">Play video\n</string>
</resources>