<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_navigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipeappproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.recipeappproject.ui.favourite.FavoriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favourite_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.recipeappproject.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.recipeappproject.ui.AboutUsFragment"
        android:label="AboutUsFragment" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.recipeappproject.ui.details.DetailsFragment"
        android:label="DetailsFragment" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

</navigation>