<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipeappproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.recipeappproject.ui.dashboard.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.recipeappproject.ui.notifications.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />


    <fragment
        android:id="@+id/splash_Fragment"
        android:name="com.example.recipeappproject.Fragment_Activity1.Splash_Fragment"
        android:label="fragment_splash_"
        tools:layout="@layout/fragment_splash_" >
        <action
            android:id="@+id/action_splash_Fragment_to_sign_up_Fragment"
            app:destination="@id/sign_up_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/sign_up_Fragment"
        android:name="com.example.recipeappproject.Fragment_Activity1.Sign_up_Fragment"
        android:label="fragment_sign_up_"
        tools:layout="@layout/fragment_sign_up_" >
        <action
            android:id="@+id/action_sign_up_Fragment_to_sign_in_Fragment"
            app:destination="@id/sign_in_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/sign_in_Fragment"
        android:name="com.example.recipeappproject.Fragment_Activity1.sign_in_Fragment"
        android:label="fragment_sign_in_"
        tools:layout="@layout/fragment_sign_in_" />
</navigation>