<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Fragment_Activity1.sign_in_Fragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_email_text"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_marginTop="288dp"
        android:backgroundTint="@color/lightOrange"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:text="@string/Email"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password_text"
        android:layout_width="417dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lightOrange"
        android:drawableStart="@drawable/baseline_password_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_text"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/button_logIn"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/lightOrange"
        android:drawableEnd="@drawable/baseline_assignment_turned_in_24"
        android:text="@string/Login"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_text" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_signin"
        android:layout_width="410dp"
        android:layout_height="218dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/orange"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>